--- a/src/App.css
+++ b/src/App.css
@@ -13,9 +13,8 @@
   }
 }
 
-.App-header {
+.App-body {
   background-color: #282c34;
-  /* background-color: white; */
   min-height: 100vh;
   display: flex;
   flex-direction: column;
