--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,10 @@
   font-size: calc(10px + 2vmin);
   color: white;
 }
+.container{
+  background-color: #282c34;
+}
+
 
 .App-link {
   color: #61dafb;
